# dbt_project

./: README.md  pyproject.toml
.github/workflows/: dbt_docs_delpoy.yml
dbt_northwind/: dbt_project.yml  profiles.yml  requirements.txt
dbt_northwind/docs/: homepage.md
dbt_northwind/models/gold/: _gold_models.yml  customers_more_than_one_thousand_sales.sql  top_10_categories.sql  top_10_customers.sql  top_10_products.sql
dbt_northwind/models/silver/: _silver_models.yml  filtered_categories.sql  filtered_customers.sql  filtered_order_details.sql  filtered_orders.sql  filtered_products.sql  filtered_us_states.sql
dbt_northwind/models/staging/: _stg_models.yml  _stg_schema.yml  stg_categories.sql  stg_customers.sql  stg_order_details.sql  stg_orders.sql  stg_products.sql  stg_us_states.sql
